--- a/service.yaml
+++ b/service.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: time-service
+  name: time-service-app
 spec:
   type: NodePort
   selector:
-    app: time-service
+    app: time-service-app
   ports:
     - port: 3030
       targetPort: 3030
